--- a/src/style.css
+++ b/src/style.css
@@ -14,21 +14,22 @@
 }
 
 @keyframes flipTitle {
-    from{
+    from {
         transform: rotateX(90deg);
     }
-    to{
+
+    to {
         transform: rotateX(0deg);
     }
 }
 
 .containerInput {
-    background-color: rgba(255,255,255, 0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     padding: 15px;
     margin: 34px 0;
     display: flex;
     border-radius: 8px;
-    box-shadow: 1px 3px 8px rgba(0,0,0,0.2)
+    box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2)
 }
 
 .containerInput input {
@@ -78,9 +79,9 @@
     font-weight: bold;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 430px) {
     .title {
-      font-size: 75px;
+        font-size: 55px;
     }
 
     .main h2 {
@@ -92,4 +93,20 @@
         min-height: 250px;
     }
 
-  }
+}
+
+@media screen and (max-width: 992px) {
+    .title {
+        font-size: 75px;
+    }
+
+    .main h2 {
+        font-size: 28px;
+    }
+
+    .main {
+        width: 80%;
+        min-height: 250px;
+    }
+
+}
