--- a/src/style.css
+++ b/src/style.css
@@ -95,7 +95,7 @@
 
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 992px) {
     .title {
         font-size: 75px;
     }
