--- a/src/style.css
+++ b/src/style.css
@@ -110,3 +110,11 @@
     }
 
 }
+
+@media screen and (min-width: 820px) and (min-width: 1180px) {
+    .main {
+        width: 40%;
+        min-height: 250px;
+    }
+
+}
